--- a/graphml/pyg_intro.ipynb
+++ b/graphml/pyg_intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "        [ 1.]])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "3"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "6"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "1"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "False"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "True"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "True"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -258,30 +258,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ikram.ali/miniconda3/envs/graph/lib/python3.11/site-packages/torch_geometric/data/in_memory_dataset.py:157: UserWarning: It is not recommended to directly access the internal storage format `data` of an 'InMemoryDataset'. If you are absolutely certain what you are doing, access the internal storage via `InMemoryDataset._data` instead to suppress this warning. Alternatively, you can access stacked individual attributes of every graph via `dataset.{attr_name}`.\n",
-      "  warnings.warn(msg)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "torch_geometric.data.data.Data"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "type(dataset.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data(x=[3, 1], edge_index=[2, 6])"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
    ]
   },
   {
@@ -763,6 +775,98 @@
     "    if epoch % 10 == 0:\n",
     "        visualize_embedding(h, color=data.y, epoch=epoch, loss=loss)\n",
     "        time.sleep(0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = dataset[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data(x=[34, 34], edge_index=[2, 156], y=[34], train_mask=[34])"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 0., 0.,  ..., 0., 0., 0.],\n",
+       "        [0., 1., 0.,  ..., 0., 0., 0.],\n",
+       "        [0., 0., 1.,  ..., 0., 0., 0.],\n",
+       "        ...,\n",
+       "        [0., 0., 0.,  ..., 1., 0., 0.],\n",
+       "        [0., 0., 0.,  ..., 0., 1., 0.],\n",
+       "        [0., 0., 0.,  ..., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  1,  1,\n",
+       "          1,  1,  1,  1,  1,  1,  1,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  3,\n",
+       "          3,  3,  3,  3,  3,  4,  4,  4,  5,  5,  5,  5,  6,  6,  6,  6,  7,  7,\n",
+       "          7,  7,  8,  8,  8,  8,  8,  9,  9, 10, 10, 10, 11, 12, 12, 13, 13, 13,\n",
+       "         13, 13, 14, 14, 15, 15, 16, 16, 17, 17, 18, 18, 19, 19, 19, 20, 20, 21,\n",
+       "         21, 22, 22, 23, 23, 23, 23, 23, 24, 24, 24, 25, 25, 25, 26, 26, 27, 27,\n",
+       "         27, 27, 28, 28, 28, 29, 29, 29, 29, 30, 30, 30, 30, 31, 31, 31, 31, 31,\n",
+       "         31, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 32, 33, 33, 33, 33, 33,\n",
+       "         33, 33, 33, 33, 33, 33, 33, 33, 33, 33, 33, 33],\n",
+       "        [ 1,  2,  3,  4,  5,  6,  7,  8, 10, 11, 12, 13, 17, 19, 21, 31,  0,  2,\n",
+       "          3,  7, 13, 17, 19, 21, 30,  0,  1,  3,  7,  8,  9, 13, 27, 28, 32,  0,\n",
+       "          1,  2,  7, 12, 13,  0,  6, 10,  0,  6, 10, 16,  0,  4,  5, 16,  0,  1,\n",
+       "          2,  3,  0,  2, 30, 32, 33,  2, 33,  0,  4,  5,  0,  0,  3,  0,  1,  2,\n",
+       "          3, 33, 32, 33, 32, 33,  5,  6,  0,  1, 32, 33,  0,  1, 33, 32, 33,  0,\n",
+       "          1, 32, 33, 25, 27, 29, 32, 33, 25, 27, 31, 23, 24, 31, 29, 33,  2, 23,\n",
+       "         24, 33,  2, 31, 33, 23, 26, 32, 33,  1,  8, 32, 33,  0, 24, 25, 28, 32,\n",
+       "         33,  2,  8, 14, 15, 18, 20, 22, 23, 29, 30, 31, 33,  8,  9, 13, 14, 15,\n",
+       "         18, 19, 20, 22, 23, 26, 27, 28, 29, 30, 31, 32]])"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.edge_index"
    ]
   },
   {
