--- a/graphml/pyg_intro.ipynb
+++ b/graphml/pyg_intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
     }
    ],
    "source": [
-    "edge_index = torch.tensor([[0, 1, 1, 2,0,0],\n",
+    "edge_index = torch.tensor([[0, 1, 1, 2,0,0,],\n",
     "                           [1, 0, 2, 1,2,0]], dtype=torch.long)\n",
     "\n",
     "print(edge_index.shape)\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "        [ 1.]])"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -70,8 +70,8 @@
       "        [ 0.],\n",
       "        [ 1.]])\n",
       "x found in data\n",
-      "edge_index tensor([[0, 1, 1, 2, 0, 0],\n",
-      "        [1, 0, 2, 1, 2, 0]])\n",
+      "edge_index tensor([[0, 1, 1, 2, 0, 0, 6],\n",
+      "        [1, 0, 2, 1, 2, 0, 3]])\n",
       "edge_index found in data\n"
      ]
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "3"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
